--- a/index.html
+++ b/index.html
@@ -187,8 +187,9 @@
                         </h3>
                                    
                    <h4 data-scroll-reveal="enter from the bottom after 0.8s">
-               <i class="fa fa-quote-left "></i> Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                        Nulla pretium lectus vel Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+               <i class="fa fa-quote-left "></i> AI-reader  is a game-changer, offering efficient automatic summarization, customizable summary lengths, and seamless multilingual support.
+               Its ability to highlight key information, extract keywords, and provide sentiment analysis makes it an indispensable tool for staying informed and saving time.
+               I highly recommend it for anyone seeking to streamline their article consumption process.
                          <i class="fa fa-quote-right "></i>
                        <br />
                        <span class="pull-right"><strong>-Jimmy Kelly</strong></span>
