--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <li><a href="#developers">DEVELOPERS</a></li>
                     <!-- <li><a href="#pricing">PRICING</a></li>-->
                      <li><a href="#contact">CONTACT</a></li>
-                     <li><a href="mailto:info@aireader.com?Subject=Product%20Enquiry" target="_top"> <i class="fa fa-envelope-o"></i><span class="home-mail">e-mail: info@farmIT.com</span></a></li>
+                     <li><a href="mailto:info@aireader.com?Subject=Product%20Enquiry" target="_top"> <i class="fa fa-envelope-o"></i><span class="home-mail">e-mail: info@aireader.com</span></a></li>
                 </ul>
             </div>
            
