--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                
                 <h2 data-scroll-reveal="enter from the bottom after 0.1s">
                     <strong>
-                        <a href="#" style="color:#fff;" target="_blank">AI - READER</a>
+                        <a href="https://5000-raspy-fog-87492958.in-ws1.runcode.io/" style="color:#fff;" target="_blank">AI - READER</a>
                         </strong>
                         </h2>
                                    
